# kine_ros2

./: .gitignore  CMakeLists.txt
src/interactive_goal/: CMakeLists.txt  interactive_goal_node.cpp  package.xml
src/kine/: CMakeLists.txt  kine_control.cpp  kine_environment.cpp  load_urdf.hpp  package.xml
src/kine/config/: crane3r.srdf  display.rviz
src/kine/include/: KineControl.hpp  KineEnvironment.hpp
src/kine/launch/: display_robot.launch.py  display_robot_moveit.launch.py  display_robot_rviz.launch.py
src/kine/src/: EndEffectorTrail.hpp  KineControl.cpp  KineEnvironment.cpp  Target.hpp  load_urdf.hpp
src/kine/urdf/: crane3r.urdf  robot.urdf
src/kine_bringup/: CMakeLists.txt  package.xml
src/kine_bringup/launch/: display_robot.launch.py  display_robot_moveit.launch.py  display_robot_rviz.launch.py
src/kine_msgs/: CMakeLists.txt  package.xml
src/kine_msgs/srv/: SolveIK.srv
src/kine_robot_description/: CMakeLists.txt  package.xml
src/kine_robot_description/config/: crane3r.srdf  display.rviz  joint_limits.yaml  kinematics.yaml
src/kine_robot_description/urdf/: crane3r.urdf  irb2400.urdf
src/kine_vision/: CMakeLists.txt  kine_vision.cpp  package.xml
