<?xml version="1.0"?>
<package format="3">
    <name>kine_msgs</name>
    <version>0.0.0</version>
    <description>Interfaces for kine</description>
    <maintainer email="laht@ntnu.com">you</maintainer>
    <license>Apache-2.0</license>

    <depend>geometry_msgs</depend>
    <depend>std_msgs</depend>

    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <exec_depend>rosidl_default_runtime</exec_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
        <member_of_group>rosidl_interface_packages</member_of_group>
    </export>
</package>
